--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>hello</title>
   </head>
-  <body></body>
+  <body>
+    <h1>This is just a test.</h1>
+  </body>
 </html>
